updating info and fixing overflow content

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -169,6 +169,7 @@ html,body {height:100%;background-color:$lightGray;}
 	font-size:.8rem;
 	line-height:1.2rem;
 	padding-bottom:2rem;
+	overflow-y:auto
 }
 .contentTop {
 	position:relative;
